[gd_scene load_steps=32 format=3 uid="uid://b4jil023rco6c"]

[ext_resource type="Texture2D" uid="uid://0daah5p45aw3" path="res://nivel_5/enemigos/Boss/big_boss.png" id="1_b6oxp"]
[ext_resource type="Script" uid="uid://ce60bdv0pn74g" path="res://scripts/boss.gd" id="1_h2k0m"]
[ext_resource type="Script" uid="uid://1744rfpvv0qd" path="res://scripts/boss_effects_manager.gd" id="3_qbo05"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b6oxp"]
atlas = ExtResource("1_b6oxp")
region = Rect2(7, 222, 62, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_1h2ti"]
atlas = ExtResource("1_b6oxp")
region = Rect2(69, 222, 62, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvfm8"]
atlas = ExtResource("1_b6oxp")
region = Rect2(131, 222, 62, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f5a0"]
atlas = ExtResource("1_b6oxp")
region = Rect2(193, 222, 62, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_8esb5"]
atlas = ExtResource("1_b6oxp")
region = Rect2(268, 222, 60, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sud2"]
atlas = ExtResource("1_b6oxp")
region = Rect2(328, 222, 60, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_gggmf"]
atlas = ExtResource("1_b6oxp")
region = Rect2(388, 222, 60, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_hu5fa"]
atlas = ExtResource("1_b6oxp")
region = Rect2(448, 222, 60, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_wer5t"]
atlas = ExtResource("1_b6oxp")
region = Rect2(508, 222, 60, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_quiff"]
atlas = ExtResource("1_b6oxp")
region = Rect2(48, 332, 68, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2k0m"]
atlas = ExtResource("1_b6oxp")
region = Rect2(116, 332, 68, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbo05"]
atlas = ExtResource("1_b6oxp")
region = Rect2(184, 332, 68, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_a655o"]
atlas = ExtResource("1_b6oxp")
region = Rect2(252, 332, 68, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkfmb"]
atlas = ExtResource("1_b6oxp")
region = Rect2(320, 332, 68, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_koywj"]
atlas = ExtResource("1_b6oxp")
region = Rect2(388, 332, 68, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4iw8"]
atlas = ExtResource("1_b6oxp")
region = Rect2(456, 332, 68, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kili"]
atlas = ExtResource("1_b6oxp")
region = Rect2(11, 116, 67, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_mn2cc"]
atlas = ExtResource("1_b6oxp")
region = Rect2(78, 116, 67, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaril"]
atlas = ExtResource("1_b6oxp")
region = Rect2(145, 116, 67, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rijf"]
atlas = ExtResource("1_b6oxp")
region = Rect2(212, 116, 67, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8c68"]
atlas = ExtResource("1_b6oxp")
region = Rect2(279, 116, 67, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_ud1hg"]
atlas = ExtResource("1_b6oxp")
region = Rect2(346, 116, 67, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_55s23"]
atlas = ExtResource("1_b6oxp")
region = Rect2(413, 116, 67, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_8k2mj"]
atlas = ExtResource("1_b6oxp")
region = Rect2(480, 116, 67, 103)

[sub_resource type="SpriteFrames" id="SpriteFrames_1h2ti"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6oxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1h2ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvfm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f5a0")
}],
"loop": true,
"name": &"angry1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8esb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sud2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gggmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hu5fa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wer5t")
}],
"loop": true,
"name": &"angry2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_quiff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2k0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbo05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a655o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkfmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_koywj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4iw8")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kili")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mn2cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaril")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rijf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8c68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ud1hg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55s23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8k2mj")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b6oxp"]
radius = 7.0
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_quiff"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h2k0m"]
radius = 40.0

[node name="Boss" type="CharacterBody2D"]
script = ExtResource("1_h2k0m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.306452, 0.3)
sprite_frames = SubResource("SpriteFrames_1h2ti")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_b6oxp")

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CapsuleShape2D_quiff")

[node name="EffectsContainer" type="Node2D" parent="."]
script = ExtResource("3_qbo05")

[node name="RageParticles" type="CPUParticles2D" parent="EffectsContainer"]
emitting = false
amount = 50

[node name="ChargeParticles" type="CPUParticles2D" parent="EffectsContainer"]
emitting = false
amount = 30
lifetime = 0.8

[node name="AreaAttackEffect" type="Node2D" parent="EffectsContainer"]

[node name="WarningCircle" type="Line2D" parent="EffectsContainer/AreaAttackEffect"]

[node name="ExplosionEffect" type="CPUParticles2D" parent="EffectsContainer/AreaAttackEffect"]
emitting = false
amount = 100
lifetime = 1.5

[node name="HealthBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBackground" type="ColorRect" parent="HealthBar"]
layout_mode = 0
offset_left = 101.0
offset_top = 35.0
offset_right = 141.0
offset_bottom = 75.0

[node name="HealthFill" type="ColorRect" parent="HealthBar"]
layout_mode = 0
offset_left = 45.0
offset_top = 14.0
offset_right = 85.0
offset_bottom = 54.0

[node name="HealthLabel" type="Label" parent="HealthBar"]
layout_mode = 0
offset_left = 34.0
offset_top = 11.0
offset_right = 74.0
offset_bottom = 34.0

[node name="DetectionArea" type="Area2D" parent="."]

[node name="DetectionShape" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_h2k0m")
